# omnia-timeseries-python

./: .gitignore  README.md  pyproject.toml
examples/: demo.py  demo_msal_interactive.py  device_code_auth.ipynb  get_data_protobuf.ipynb  usage_examples.ipynb
src/omnia_timeseries/: api.py  http_client.py
tests/: test_api.py
